Inconsistent icons for Force field #37189

Closed
opened 2013-10-23 10:44:46 +02:00 by Cenek Strichel · 7 comments

%%%--- Operating System, Graphics card ---

- Blender version with error, and version that worked ---

r60900

- Short description of error ---

When you create new Force field it has setted Empty null to Single arrow or Plain Axes during creating. But when I change Type of Force fields to another type it doesnt change Empty display. So when I create Wind Force I have Single Arrow as Display, but when I change it to turbulence Arrow remain, but Turbulence use Plain Axes. So I think that it would be good with changing Force Field type also change Empty Display type for remain consistent.

But best solution IMO will supress displaying Empty Display, and use only Force field icon. But it will need change some icons of Force field (for example wind will need arrows for direction)

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

%%%

%%%--- Operating System, Graphics card --- - Blender version with error, and version that worked --- r60900 - Short description of error --- When you create new Force field it has setted Empty null to Single arrow or Plain Axes during creating. But when I change Type of Force fields to another type it doesnt change Empty display. So when I create Wind Force I have Single Arrow as Display, but when I change it to turbulence Arrow remain, but Turbulence use Plain Axes. So I think that it would be good with changing Force Field type also change Empty Display type for remain consistent. But best solution IMO will supress displaying Empty Display, and use only Force field icon. But it will need change some icons of Force field (for example wind will need arrows for direction) - Steps for others to reproduce the error (preferably based on attached .blend file) --- %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Thomas, will you like to look into this issue? Simple rna update function i guess :)%%%

%%%Thomas, will you like to look into this issue? Simple rna update function i guess :)%%%

%%%Will check. %%%

%%%Will check. %%%
Thomas Dinges removed their assignment 2013-11-22 16:43:46 +01:00
Sergey Sharybin self-assigned this 2013-12-04 16:29:08 +01:00

This issue was referenced by blender/blender-addons-contrib@c6f425c875

This issue was referenced by blender/blender-addons-contrib@c6f425c8758d0c674f5e59075dbb3fef418af29a

This issue was referenced by c6f425c875

This issue was referenced by c6f425c8758d0c674f5e59075dbb3fef418af29a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c6f425c875.

Closed by commit c6f425c875.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37189
No description provided.