Fix T37189: Inconsistent icons for Force field

There's still an issue with Curve Guide force field
which you can not so easily change type from/to.

This i would consider TODO for later.